# homeassistant_salus

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  RELEASE.md  pyproject.toml  requirements_test.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.yml  support.yml
.github/workflows/: ci.yml
custom_components/salus/: __init__.py  _climate_state.py  binary_sensor.py  climate.py  config_flow.py  coordinator.py  cover.py  diagnostics.py  entity.py  icons.json  lock.py  manifest.json  sensor.py  strings.json  switch.py
custom_components/salus/translations/: ca.json  en.json
docs/: loc-reduction-opportunities.md  migration-from-older-forks.md  normalized-climate-model-plan.md  rs600-multifunction-mapping.md  supported-devices.md  upstream-issues-status.md
tests/: conftest.py  test_binary_sensor.py  test_climate.py  test_climate_state.py  test_config_flow.py  test_coordinator.py  test_cover.py  test_diagnostics.py  test_init.py  test_lock.py  test_sensor.py  test_switch.py
