[project]
name = "homeassistant-salus"
version = "0.8.0"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"custom_components/**" = ["I001", "UP035"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["custom_components/salus"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = true
